# armybox

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DOCKER.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  PACKAGING.md  README.md  SECURITY.md  TODO.md  bench.sh  chunk-4UE7WOEM.js  chunk-D7Z3JEED.js  chunk-DRX2FLHU.js  chunk-KVULZ7C4.js  chunk-W44MMAGS.js  docker-compose.yml  main-GQXNQ6HF.js  manifest.webmanifest  styles-GIIBTFHY.css
.cargo/: config.toml
.cursor/rules/: posix-compliance.mdc
.github/workflows/: deploy-docs.yml  docker.yml  release.yml
benches/: applet_benchmarks.rs  compression_benchmarks.rs  text_benchmarks.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: applets.rs  compression.rs  text.rs
crates/benchmarks/src/: lib.rs
distro/: Dockerfile  Makefile  README.md
distro/config/: fstab  inittab  passwd  profile  repositories  sysctl.conf
distro/scripts/: build-docker.sh  build-iso.sh  build-rootfs.sh  run-qemu.sh
docs/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
docs/.angular/cache/21.0.4/armybox-docs/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
docs/src/: index.html  manifest.webmanifest  robots.txt  sitemap.xml  styles.css
docs/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
docs/src/app/pages/api/: api.component.ts
docs/src/app/pages/applets/: applets.component.ts
docs/src/app/pages/benchmarks/: benchmarks.component.ts
docs/src/app/pages/building/: building.component.ts
docs/src/app/pages/comparison/: comparison.component.ts
docs/src/app/pages/home/: home.component.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_awk_program.rs  fuzz_compression.rs  fuzz_dd_args.rs  fuzz_grep_pattern.rs  fuzz_sed_script.rs  fuzz_tar.rs
packaging/alpine/: APKBUILD
packaging/android/: README.md  build-magisk-module.sh  install-termux.sh
packaging/android/magisk/: customize.sh  module.prop  post-fs-data.sh  service.sh
packaging/archlinux/: .SRCINFO  PKGBUILD
packaging/debian/: armybox-install-symlinks  changelog  control  copyright  rules
packaging/ios/: Makefile  README.md  control  postinst  prerm
packaging/rpm/: armybox.spec
scripts/: benchmark-compare.sh  build-all.sh  build-android.sh  build-ios.sh  build-packages.sh  build-small.sh  build-static.sh  install.sh  publish.sh  reorganize_applets.py  run_benchmarks.sh  run_fuzz.sh  split_applets.py  split_simple.py  split_with_helpers.py
src/: error.rs  io.rs  lib.rs  main.rs  sys.rs
src/applets/: archive.rs  editors.rs  file.rs  init.rs  misc.rs  mod.rs  network.rs  package.rs  screen.rs  shell.rs  system.rs  text.rs
src/applets/system/: common.rs
tests/: property_tests.rs
