[package]
name = "armybox"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Pegasus Heavy Industries <contact@pegasusheavy.industries>"]
description = "A memory-safe #[no_std] BusyBox/Toybox clone in Rust - 293 Unix utilities in 108KB"
documentation = "https://docs.rs/armybox"
readme = "README.md"
homepage = "https://pegasusheavy.github.io/armybox"
repository = "https://github.com/pegasusheavy/armybox"
license = "MIT OR Apache-2.0"
keywords = ["busybox", "toybox", "no_std", "embedded", "unix"]
categories = ["command-line-utilities", "no-std", "embedded"]
exclude = ["docs/", "dist/", "fuzz/", "packaging/", "scripts/", ".github/", "target/", "benches/", "crates/"]

[features]
default = ["alloc"]
alloc = []          # Enable heap allocation (Vec, String, Box)
std = ["alloc"]     # Enable std (for easier testing, not required)
android = ["alloc"] # Android/Bionic-specific compatibility
apk = ["alloc"]     # Alpine Package Keeper (APK) package manager

[dependencies]
# Core dependency - provides syscall interface
libc = "0.2"

[dev-dependencies]
# For testing only - benchmarks are in crates/benchmarks
tempfile = "3"

# Benchmark profile
[profile.bench]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false

# Don't use panic=abort for dev profile to allow tests
[profile.dev]
panic = "unwind"

# Test profile needs unwind for test harness
[profile.test]
panic = "unwind"

[[bin]]
name = "armybox"
path = "src/main.rs"
