[package]
name = "armybox-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "applets"
harness = false

[[bench]]
name = "text"
harness = false

[[bench]]
name = "compression"
harness = false
